--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -48,9 +48,9 @@ Using the 2016 Democratic primary \cite{wronski2018tale} demonstrate that Democr
 %ask Dr. Bankert if okay to \cite{bankert2020authoritarian}
 
 
-Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \citep{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004 (Fig. \ref{fig:cdf-sd}). By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship's strength. 
+Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \citep{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004 (Fig. \ref{fig:cdf-sd}). By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship's strength. My findings bolster those of  \cite{klar2018affective}---partisan warmth has declined across the board.
 \begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-sd-ns.png}
+\center\includegraphics[width=5in]{cdf-sd.png}
 \caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
 \end{figure}
 
@@ -70,10 +70,10 @@ The data from this study were taken from the American National Election Study Cu
 \end{figure}
 
 Previous studies of affective polarization (e.g. \citet{iyengar2012affect}) have  focused on partisans' net partisan affect, this approach is problemmatic. When using a measure built from both in party and out party evaluations, it is not clear whether a change in NPA is borne of a change in in-party or out-party feeling. For example, the mean out-party affect of Republicans and Democrats in 2016 were each about 25 (Figure \ref{fig:cdf-mean}), but Republicans' NPA was significantly lower than Democrats' (Figure \ref{fig:cdf-npa}). Ostensibly, Republicans were \textit{less} polarized than Democrats, but to say so belies the fact that Republicans are very cold towards Democrats, they are just somewhat colder towards \textit{their own} party as well.
-\begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-npa-ns.png}
-\caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
-\end{figure}
+%\begin{figure}[H]
+%\center\includegraphics[width=5in]{cdf-npa-ns.png}
+%\caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
+%\end{figure}
 
  An increase in NPA can be observed \textit{either} when in-party feeling increases \textit{or} when out-party feeling decreases (and vice-versa). Similarly, partisans could become more hostile towards their political opponents, while NPA remained constant. These unfortunate characteristics of the NPA measure are becoming more problematic as partisans' feelings towards their own party become less consistent. Indeed, we see increases in NPA (Fig. \ref{fig:cdf-npa}) even as mean in-party affect grows colder (Fig. \ref{fig:cdf-mean}).   Polarization implies mean in and out party affect diverging from one another; we observe instead partisans growing to dislike both parties---one at a faster rate than the other. 
 
@@ -89,11 +89,11 @@ Since 2004, partisans' feelings towards their own party have become less cohesiv
 
 Negative evaluations of parties are increasingly common. The modal value of independents' average party FT has always been 50; in the late \nth{20} century, the distribution was characterized by a rightward tail. From 2000--2016 that tail has shifted left. Far more independents now have a net-negative disposition towards the two major parties. Similarly, when examining the distributions of in-party feeling thermometers the left skey has become more apparent; More Republicans and Democrats are now cold---below 50---toward their party than at any point in the range of data.
 \begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-below-50-ns.png}
-\caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} Republicans and Democrats increasingly report feeling colder than the median. This trend is robust to multiple thresholds (further figures included in appendix.}}
+\center\includegraphics[width=5in]{cdf-below-50.png}
+\caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} Republicans and Democrats increasingly report feeling colder than the median.} This trend is robust to multiple thresholds figures included in the appendix show that this trend is robust to choice of ``cutoff point" as well as across strengths of party ID. }
 \end{figure}
 
-The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans.
+The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification. 
 
 
 
