--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,3 +1,14 @@
+@article{klar2018affective,
+  title={Affective polarization or partisan disdain? Untangling a dislike for the opposing party from a dislike of partisanship},
+  author={Klar, Samara and Krupnikov, Yanna and Ryan, John Barry},
+  journal={Public Opinion Quarterly},
+  volume={82},
+  number={2},
+  pages={379--390},
+  year={2018},
+  publisher={Oxford University Press US}
+}
+
 @misc{anescdf,
   title={The 1948--2016 ANES Cumulative Data File},
   author={American National Election Studies},
