--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -65,34 +65,40 @@ The data from this study were taken from the American National Election Study Cu
 
 \section{Results}
 
-As shown in Figure \ref{fig:cdf-mean}, out party feeling thermometers for Democrats and Republicans have declined. We also a see a decline in Republican's in party FTs since 2004, and a slight decline in those of Democrats.
+As shown in Figure \ref{fig:cdf-mean}, out party feeling thermometers for Democrats and Republicans have declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
+
+From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:cdf-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
+
+As variance increases, so to has the proportion of partisans who rate their own party below a 50---a substantively meaningful threshold indicating that partisans are more cold than warm toward their own party. When leaning independents are included (following \citep{klar2016independent}), 10\% of Democrats and almost 20\% of Republicans are found to be cold towards their own party (up from 5\% each in 2004), while a sample which excludes leaning independents indicates 13\% of Republicans and 8\% of Democrats to be cold. Regardless of the cut-off point used to indicate cold affect, or the strength of partisans' identification with their party, the trend is robust---more partisans were cold to their party than has been observed at any point across the available data.
+
+Negative evaluations of parties are increasingly common. The modal value of independents' average party FT has always been 50; in the late \nth{20} century, the distribution was characterized by a rightward tail. From 2000--2016 that tail has shifted left. Far more independents now have a net-negative disposition towards the two major parties. Similarly, when examining the distributions of in-party feeling thermometers the left skew has become more apparent; more Republicans and Democrats are now cold---below 50---toward their party than at any point in the range of data.
+
+
+The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures made available in the appendix.
+
+Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans remain warmer than 50, these figures are striking.
+
 \begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-mean-ns.png}
+\center\includegraphics[width=5in]{cdf-ridge-ns.png}
+\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
+\end{figure}
+
+\begin{figure}[H]
+\center\includegraphics[width=4in]{cdf-mean-ns.png}
 \caption{\label{fig:cdf-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
 \end{figure}
 
 
 \begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-sd.png}
+\center\includegraphics[width=4in]{cdf-sd.png}
 \caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
 \end{figure}
 
 
-Negative evaluations of parties are increasingly common. The modal value of independents' average party FT has always been 50; in the late \nth{20} century, the distribution was characterized by a rightward tail. From 2000--2016 that tail has shifted left. Far more independents now have a net-negative disposition towards the two major parties. Similarly, when examining the distributions of in-party feeling thermometers the left skey has become more apparent; More Republicans and Democrats are now cold---below 50---toward their party than at any point in the range of data.
-
 \begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-below-50.png}
+\center\includegraphics[width=4in]{cdf-below-50.png}
 \caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} Republicans and Democrats increasingly report feeling colder than the median.} This trend is robust to multiple thresholds figures included in the appendix show that this trend is robust to choice of ``cutoff point" as well as across strengths of party ID. }
 \end{figure}
-
-The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification. 
-
-\begin{figure}[H]
-\center\includegraphics[width=7in]{cdf-ridge-ns.png}
-\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
-\end{figure}
-
-
 
 
 
