looking at dissatisfaction with democ

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -65,7 +65,7 @@ The data from this study were taken from the American National Election Study Cu
 
 \section{Results}
 
-As shown in Figure \ref{fig:cdf-mean}, out party feeling thermometers for Democrats and Republicans have declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
+As shown in Figure \ref{fig:cdf-mean}, mean out party feeling thermometers for Democrats and Republicans have obviously declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
 
 From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:cdf-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
 
@@ -78,10 +78,7 @@ The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf
 
 Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans remain warmer than 50, these figures are striking.
 
-\begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-ridge-ns.png}
-\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
-\end{figure}
+
 
 \begin{figure}[H]
 \center\includegraphics[width=4in]{cdf-mean-ns.png}
@@ -100,14 +97,28 @@ Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party
 \caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} Republicans and Democrats increasingly report feeling colder than the median.} This trend is robust to multiple thresholds figures included in the appendix show that this trend is robust to choice of ``cutoff point" as well as across strengths of party ID. }
 \end{figure}
 
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-ridge-ns.png}
+\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
+\end{figure}
 
 
 \section{Conclusion}
-The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
 
-Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists should carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
+The findings presented here support the view of \cite{klar2018affective}, that the pattern of  affective partisan polarization identified in recent years (e.g. \citet{iyengar2012affect}), is better characterized as increasing frustration with political parties in general---not simple polarization. It is true that antipathy towards the outparty has increased since the 1970s, but so to has the proportion of those who are lukewarm or cold toward their own party.
 
-If scholars' interest in affective polarization is truly in the distance between partisans' assessments of themselves and their opponents, a measure like net partisan affective is appropriate. If, however, the researcher's interest is in the absolute political hostility or animus \textit{implied} by that distance, they should simply use partisan's direct feelings towards their enemies. There is no reason for those in the latter camp to run the risk of overcomplicating an analysis or confounding an interesting result by including in their measure a variable unrelated to their interests.
+This raises troubling normative concerns regarding citizens' faith in democracy. By the ANES's measure, the proportion of people ``Somewhat" or ``Very" dissatisfied with democracy has increased from about 18\% in 2004 (the first year the question was asked), to 34\% in 2012 and 2016.
+
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-ridge-all-dis.png}
+\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.} Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT}
+\end{figure}
+
+%The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
+
+%Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists should carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
+
+%If scholars' interest in affective polarization is truly in the distance between partisans' assessments of themselves and their opponents, a measure like net partisan affective is appropriate. If, however, the researcher's interest is in the absolute political hostility or animus \textit{implied} by that distance, they should simply use partisan's direct feelings towards their enemies. There is no reason for those in the latter camp to run the risk of overcomplicating an analysis or confounding an interesting result by including in their measure a variable unrelated to their interests.
 %\subsection{Research Design Concerns and Limitations}
 %\begin{figure}[H]
 %\center\includegraphics[width=6in]{therm-hist-2016.png}
