adding ideo distance ts
adding ideo distance ts

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -108,12 +108,11 @@ Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party
 The findings presented here support the view of \cite{klar2018affective}, that the pattern of  affective partisan polarization identified in recent years (e.g. \citet{iyengar2012affect}), is better characterized as increasing frustration with political parties in general---not simple polarization. It is true that antipathy towards the outparty has increased since the 1970s, but so to has the proportion of those who are lukewarm or cold toward their own party.
 
 This raises troubling normative concerns regarding citizens' faith in democracy. By the ANES's measure, the proportion of people ``Somewhat" or ``Very" dissatisfied with democracy has increased from about 18\% in 2004 (the first year the question was asked), to 34\% in 2012 and 2016.
-
 \begin{figure}[H]
 \center\includegraphics[width=5in]{cdf-ridge-all-dis.png}
-\caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.} Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT}
+\caption{\label{fig:ridge-dis} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT. Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT}}
 \end{figure}
-
+Figure \ref{fig:ridge-dis} shows all respondents' mean partisan feeling thermometer (the average of their Democrat and Republican thermometers), stratified by whether the respondent is satisfied or dissatisfied with Democracy. Unsurprisingly, the left-ward tails are largest among discontents, but all three groups (satisfied, dissatisfied, and those who weren't sure or declined to answer) have become increasingly likely to be, an average, cold towards the parties.
 %The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
 
 %Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists should carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
